...
authorizationErrorMessage = "This feauture requires you to sign in with your TMDb account";
genericErrorTitle = "Unexpected error";
genericErrorMessage = "Oops! something went wrong!";

/* Menu */
topListMenuItemText = "Browse toplists";
watchListMenuItemText = "My watchlist";
favoritesMenuItemText = "My favorite movies";
signInMenuItemText = "Sign in";
signOutMenuItemText = "Sign out";
nameLabelGuest = "Guest";
searchMenuItemText = "Search";
aboutmenuItemText = "About";

...
